--- a/.travis.yml
+++ b/.travis.yml
@@ -1,3 +1,8 @@
-language: ruby
+script: "bundle exec rake travis"
+before_script: ./bin/ci/before_build.sh
 rvm:
+  - 1.9.2
   - 1.9.3
+notifications:
+  email:
+    - saratovsource@gmail.com
